--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       content="food cost, restaurant management, ingredient tracking, recipe costing, sales tracking"
     />
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     />
   </head>
   <body>
